--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ipa.js": "^1.4.0",
     "jade": "^1.11.0",
     "mocha": "^5.0.1",
+    "moment": "^2.21.0",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0"
