--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "csprng": "^0.1.2",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "ipa.js": "^3.1.0-beta",
+    "ipa.js": "^3.2.0",
     "jade": "^1.11.0",
     "mocha": "^5.0.1",
     "moment": "^2.21.0",
