--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "serve": "pm2 start ./bin/www; pm2 list --watch"
+    "start": "rollup -c; node ./dist/server"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -21,6 +20,11 @@
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.1",
+    "rollup": "^0.59.4",
+    "rollup-plugin-typescript": "^0.8.1"
   },
   "engines": {
     "node": ">= 6.0.0",
