--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "serve": "pm2 start ./bin/www; pm2 list --watch"
+    "serve": "pm2 start ./bin/www; pm2 list --watch",
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
